# rohan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  rohan.c  rohan.h
include/: barycentric.hpp  buffer.hpp  config.hpp  drawcall.hpp  frame.h  frame.hpp  plane.hpp  render.h  render.hpp  rhdefs.hpp  rmath.h  shader.hpp  shader_type.hpp  simd.h  state.hpp  transform.hpp  vertex_type.hpp
include/simd/: vector.hpp
src/: barycentric.c  barycentric.cpp  barycentric.h  config.cpp  frame.c  main.c  plane.cpp  render.c  render.cpp  render.h  rmath.c  rohan.h  shader.h  simd.c  state.cpp  transform.cpp  type.h
src/simd/: cast.h  float.h  int.h  rvm.h
testing/: CMakeLists.txt  main.cpp
